package rewards;

/**
 * Reward for completing Level 4 (ISCALE 404): a Backpack.
 */
public class Backpack extends Reward {
    /** Constructs a Backpack reward for stage 4. */
    public Backpack() {
        super("Backpack", 4);
    }
}