package rewards;

/**
 * Reward for completing Level 5 (ISCALE 405): a 3-month ChatGPT Pro subscription.
 */
public class ChatGPTPro extends Reward {
    /** Constructs a ChatGPTPro reward for stage 5. */
    public ChatGPTPro() {
        super("ChatGPT Pro (3 months)", 5);
    }
}