package rewards;

/**
 * Reward for completing Level 1 (ISCALE 401): a pair of Glasses.
 */
public class Glasses extends Reward {
    /** Constructs a Glasses reward for stage 1. */
    public Glasses() {
        super("Glasses", 1);
    }
}