package rewards;

/**
 * Reward for completing Level 2 (ISCALE 402): a Mouse.
 */
public class Mouse extends Reward {
    /** Constructs a Mouse reward for stage 2. */
    public Mouse() {
        super("Mouse", 2);
    }
}