package rewards;

/**
 * Reward for completing Level 3 (ISCALE 403): a Notebook.
 */
public class Notebook extends Reward {
    /** Constructs a Notebook reward for stage 3. */
    public Notebook() {
        super("Notebook", 3);
    }
}